Fix alignment with slider

--- a/node/src/Generator.css
+++ b/node/src/Generator.css
@@ -11,6 +11,6 @@
   margin-bottom: 2vh;
 }
 
-.generatorViewButton {
+.generatorViewBottom {
     margin-top: 3vh;
 }
